# ato_chatbot

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/: examples-documents.json
src/ato_chatbot/: __init__.py  chat_interface.py
src/ato_chatbot/datasets/: __init__.py
src/ato_chatbot/pipelines/: crawl_page_pipeline.py  index_pipeline.py  simple_index_pipeline.py
src/demo/: llamda_demo.py
